[develop] - fix spacing

--- a/src/app/components/mem-deck-trainer/mem-deck-trainer.component.sass
+++ b/src/app/components/mem-deck-trainer/mem-deck-trainer.component.sass
@@ -1,5 +1,5 @@
 .container
-  height: 100%
+  margin-top: 8px
 
 .card-display
   margin-top: 16px
